# h2o-kubernetes

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pod.yaml  sample_h2o.yaml
.github/workflows/: release-cli.yml  release-operator.yml  release.yml  rust.yml
bundle/manifests/: h2o-operator.clusterserviceversion.yaml
bundle/metadata/: annotations.yaml
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/src/cli/: mod.rs
cli/tests/: integration_tests.rs
cli/tests/permissions/: cluster_role.yaml
deployment/: Cargo.toml
deployment/src/: client.rs  configmap.rs  crd.rs  finalizer.rs  headless_service.rs  ingress.rs  lib.rs  pod.rs  service.rs  statefulset.rs
deployment/src/templates/: mod.rs
deployment/tests/permissions/: cluster_role.yaml
documentation/release/: README.md
documentation/tests/: README.md
kubeconfigs-generated/: ca.crt  kubeconfig-h2o-cli-7-default.yaml  kubeconfig-h2o-cli-8-default.yaml
operator/: Cargo.toml  README.md  sample_h2o.yaml
operator/bundle/manifests/: h2o-operator.clusterserviceversion.yaml  h2o.clusterserviceversion.yaml  h2o.crd.yaml  h2os.h2o.ai.crd.yaml
operator/crd/: h2os.h2o.ai.crd.yaml
operator/docker/: Dockerfile-operator  Dockerfile-operator-bundle
operator/documentation/: README.md
operator/release/: red_hat_docker_certification.py
operator/src/: clustering.rs  controller.rs  main.rs  verification.rs
operator/src/deployment/: client.rs  configmap.rs  crd.rs  finalizer.rs  pod.rs
operator/tests/: tests.rs
operator/tests/permissions/: cluster_role.yaml
release/: red_hat_docker_certification.py
src/: README.md  clustering.rs  controller.rs  main.rs  verification.rs
src/args/: mod.rs
src/cli/: mod.rs
src/deployment/: client.rs  crd.rs  finalizer.rs  mod.rs
src/k8s/: definitions.rs  ingress.rs  mod.rs  templates.rs
src/tests/: mod.rs
tests/: integration_tests.rs
tests/permissions/: cluster_role.yaml
tests_common/: Cargo.toml
tests_common/k8s_cluster_setup/: crb.tmpl  kubeconfig.sh
tests_common/src/: lib.rs
