[package]
name = "h2ok"
version = "0.1.0"
authors = ["Pavel Pscheidl <pavelpscheidl@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.1"
kube = "0.35.1"
kube-derive = "0.35.1"
k8s-openapi = { version = "0.8.0", default-features = false, features = ["v1_17"] }
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["macros", "rt-core"] }
serde = "1.0.114"
serde_yaml = "0.8.13"