[package]
name = "h2ok"
version = "0.1.0"
authors = ["Pavel Pscheidl <pavelpscheidl@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.1"
kube = "0.36.0"
kube-derive = "0.36.0"
k8s-openapi = { version = "0.8.0", features = ["v1_17"] }
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["macros", "rt-core"] }
serde = "1.0.114"
serde_yaml = "0.8.13"
serde_json = "1.0"
names = "0.11.0"
regex = "1.3.9"
dirs = "3.0.1"