[package]
name = "h2ok"
version = "0.0.2"
authors = ["Pavel Pscheidl <pavelpscheidl@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.1"
kube = "0.42.0"
kube-derive = "0.42.0"
k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_17"] }
futures = "0.3.5"
tokio = { version = "0.2.22", features = ["macros", "rt-core"] }
serde = "1.0.115"
serde_yaml = "0.8.13"
serde_json = "1.0"
names = "0.11.0"
regex = "1.3.9"
dirs = "3.0.1"
num = "0.3.0"
openssl = { version = "0.10", features = ["vendored"] }
atty = "0.2.14"


[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
