[package]
name = "h2ok"
version = "0.0.2"
authors = ["Pavel Pscheidl <pavelpscheidl@gmail.com>"]
edition = "2018"

[dependencies]
deployment= {path = "../deployment"}
clap = "2.33.1"
kube = "0.43.0"
kube-derive = "0.43.0"
k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_17"] }
futures = "0.3.5"
tokio = { version = "0.2.22", features = ["macros", "rt-core"] }
serde = "~1.0"
serde_json = "~1.0"
names = "~0.11"
regex = "1.3.9"
dirs = "3.0.1"
num = "0.3.0"
atty = "0.2.14"


[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
tests_common = {path = "../tests_common" }