[package]
name = "h2ok"
version = "0.1.0"
authors = ["Pavel Pscheidl <pavel@h2o.ai>", "Michal Kurka <michal.kurka@h2o.ai>"]
edition = "2018"

[dependencies]
deployment = { path = "../deployment" }
clap = "2.33.3"
kube = "0.47.0"
kube-derive = "0.47.0"
k8s-openapi = { version = "0.10.0", default-features = false, features = ["v1_17"] }
futures = "~0.3"
tokio = { version = "~1.0", features = ["macros", "rt-multi-thread"] }
serde = "~1.0"
serde_json = "~1.0"
names = "~0.11"
regex = "1.3.9"
dirs = "3.0.1"
num = "0.3.0"
atty = "0.2.14"


[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
tests_common = { path = "../tests_common" }
