[package]
name = "deployment"
version = "0.1.0"
authors = ["Pavel Pscheidl <pavel@h2o.ai>"]
edition = "2018"

[dependencies]
kube = { version = "0.43.0", default-features = true, features = ["derive"] }
kube-derive = "0.43.0"
k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_18"] }
futures = "~0.3"
serde = "~1.0"
serde_yaml = "~0.8"
tokio = { version = "0.2.22", features = ["macros", "rt-core"] }

[dev-dependencies]
tests_common = {path = "../tests_common" }
