[package]
name = "h2o-operator"
version = "0.2.0"
authors = ["Pavel Pscheidl <pavel@h2o.ai>", "Michal Kurka <michal.kurka@h2o.ai>"]
edition = "2018"

[dependencies]
kube = { version = "0.47.0", default-features = true, features = ["derive"] }
kube-derive = "0.47.0"
kube-runtime = "0.47.0"
k8s-openapi = { version = "0.10.0", default-features = false, features = ["v1_17"] }
futures = "~0.3"
serde = "~1.0"
serde_yaml = "~0.8"
serde_json = "~1.0"
tokio = { version = "~1.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.11"
simple_logger = "1.11.0"
reqwest = "0.11.0"
deployment = { path = "../deployment" }

[dev-dependencies]
assert_cmd = "1.0.1"
tests_common = { path = "../tests_common" }
